...

  final int value;
  const PySendResult(this.value);

  static PySendResult fromValue(int value) => switch (value) {
        0 => PYGEN_RETURN,
        -1 => PYGEN_ERROR,
        1 => PYGEN_NEXT,
        _ => throw ArgumentError('Unknown value for PySendResult: $value'),
      };
}

typedef sendfuncFunction = ffi.Int Function(ffi.Pointer<PyObject> iter,
...
